# rustls-split

./: COPYRIGHT  Cargo.toml  LICENSE  LICENSE-ISC  LICENSE-MIT  README.md
src/: buffer.rs  lib.rs
tests/: cert.pem  integration_test.rs  key.pem
