[package]
name = "rustls-split"
version = "0.2.1"
edition = "2018"

license = "MIT"
description = "A rustls TCPStream wrapper that can send and receive from separate threads."
homepage = "https://github.com/zenithdb/rustls-split"
documentation = "https://docs.rs/rustls-split"
repository = "https://github.com/zenithdb/rustls-split"
readme = "README.md"

[dependencies]
rustls = "0.19"
webpki = "0.21"

[dev-dependencies]
