[package]
name = "rustls-split"
version = "0.3.0"
edition = "2018"

license = "MIT OR Apache-2.0 OR ISC"
description = "A rustls TCPStream wrapper that can send and receive from separate threads."
homepage = "https://github.com/zenithdb/rustls-split"
documentation = "https://docs.rs/rustls-split"
repository = "https://github.com/zenithdb/rustls-split"
readme = "README.md"

[dependencies]
rustls = "0.20"

[dev-dependencies]
webpki = "0.21"
